--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,8 @@ app.name=Citizen Guesser
 # API Geo
 api.geo.url=https://geo.api.gouv.fr/
 
+# API Google
+api.google.url=https://www.google.com/maps/embed/v1/place?key=AIzaSyC_jBQ_3VNiydl0Sfhdvfd-7YTOhJkBam8
+
 # API Giphy
 api.giphy.url=https://api.giphy.com/v1/gifs/search?api_key=ZIvnBSS6I2gB4v7Q6p3rirpl9z14pUya&limit=15&offset=0&rating=g&lang=en
